name: fur-trader
version: 0.1.0.0
synopsis: Fur Trader - Port from  Basic Computer Games
-- Description
license: MIT
license-file: LICENSE
author: Jan Van Uytven
maintainer: ysgard@gmail.com
-- Copyright
category: Development
build-type: Simple
-- extra-source-files
-- data-files
cabal-version: >=1.10
executable fur-trader
  main-is: Main.hs
  --other-modules
  --other-extensions
  build-depends: base >=4.6
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010
